compiler/tests/fixtures/valid/action_with_embargo_anywhere.viv
// Action with a location: anywhere embargo

action announce:
    roles:
        @herald:
            as: initiator
    embargoes:
        embargo:
            location: anywhere
            time: forever
