compiler/tests/fixtures/invalid/semantics/embargo_missing_time.viv
// Embargo with no time field — should be rejected

action bad-embargo:
    roles:
        @actor:
            as: initiator
    embargoes:
        embargo:
            location: here
